--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,8 +18,15 @@
       <h2 class="govuk-heading-l">Iterations</h2>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/v1">Iteration 1</a></li>
+        <li><a href="/v1">Iteration 1</a>  {{ hmctsBadge({
+          text: 'In progress'
+        }) }}</li>
       </ul>
+
+
+
+
+
     </div>
 </div>
 
