--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -26,6 +26,9 @@
 {% from "textarea/macro.njk"         import govukTextarea %}
 {% from "warning-text/macro.njk"     import govukWarningText %}
 
+{% from "badge/macro.njk"     import hmctsBadge %}
+{% from "page-header-with-actions/macro.njk" import hmctsPageHeaderWithActions %}
+
 {% block head %}
   {% include "includes/head.html" %}
 {% endblock %}
