--- a/app/views/v1/progression.html
+++ b/app/views/v1/progression.html
@@ -6,20 +6,9 @@
 {% endblock %}
 
 {% block content %}
-  {{ hmctsPageHeaderWithActions({
-    title: {
-      html: '<h1 class="govuk-heading-xl">Your cases (h1)</h1>'
-    },
-    items: [{
-      text: 'Create case'
-    }, {
-      text: 'Get new case'
-    }]
-  }) }}
-
   <a href="/v1/">
     <div class="black-box">
-      <h1 class="govuk-heading-xl">Case details</h1>
+      <h1 class="govuk-heading-xl">Case progression</h1>
     </div>
   </a>
 </div>
