--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1,6 +1,8 @@
 // global styles for <a> and <p> tags
 $govuk-global-styles: true;
 
+$govuk-page-width: 1220px;
+
 // Import GOV.UK Frontend and any extension styles if extensions have been configured
 @import "lib/extensions/extensions";
 
