--- a/app/views/v1/details.html
+++ b/app/views/v1/details.html
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-xl">Case details (h1)</h1>
     </div>
       <div class="hmcts-page-heading__actions">
-          <a href="/v1/">
+          <a href="/v1/progression">
             <div class="black-box black-box--small">
               <h1 class="govuk-heading-m">Case actions</h1>
             </div>
