Create case filter

--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -11,9 +11,8 @@
       html: '<h1 class="govuk-heading-xl">Your cases (h1)</h1>'
     },
     items: [{
-      text: 'Create case'
-    }, {
-      text: 'Get new case'
+      text: 'Create case',
+      href: '/v1/new'
     }]
   }) }}
 
