Updated size of headings

--- a/app/views/v1/details.html
+++ b/app/views/v1/details.html
@@ -23,7 +23,7 @@
 
   <a href="/v1/">
     <div class="black-box">
-      <h1 class="govuk-heading-xl">Case details</h1>
+      <h1 class="govuk-heading-l">Case details</h1>
     </div>
   </a>
 </div>
