--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -19,14 +19,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
         <div class="black-box">
-            <h1 class="govuk-heading-xl">Filter</h1>
+            <h1 class="govuk-heading-l">Filter</h1>
         </div>
     </div>
     <div class="govuk-grid-column-two-thirds">
 
       <a href="/v1/details">
         <div class="black-box">
-          <h1 class="govuk-heading-xl">Case list</h1>
+          <h1 class="govuk-heading-l">Case list</h1>
         </div>
       </a>
 
