--- a/app/views/v1/progression.html
+++ b/app/views/v1/progression.html
@@ -8,7 +8,7 @@
 {% block content %}
   <a href="/v1/">
     <div class="black-box">
-      <h1 class="govuk-heading-xl">Case progression</h1>
+      <h1 class="govuk-heading-l">Case progression</h1>
     </div>
   </a>
 </div>
