--- a/app/views/v1/new.html
+++ b/app/views/v1/new.html
@@ -9,7 +9,7 @@
 
       <a href="/v1/progression">
         <div class="black-box">
-          <h1 class="govuk-heading-xl">Create case filter</h1>
+          <h1 class="govuk-heading-l">Create case filter</h1>
         </div>
       </a>
 
