--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,15 +17,11 @@
 
       <h2 class="govuk-heading-l">Iterations</h2>
 
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/v1">Iteration 1</a>  {{ hmctsBadge({
-          text: 'In progress'
-        }) }}</li>
-      </ul>
+      <h3 class="govuk-heading-m"><a href="/v1">Iteration 1</a> {{ hmctsBadge({
+        text: 'In progress'
+      }) }}</h3>
 
-
-
-
+      <p class="govuk-body">This iteration illustrates the components as black boxes.</p>
 
     </div>
 </div>
