--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -1,5 +1,7 @@
 
-{% extends "layout.html" %}
+{% extends "./layout.html" %}
+
+{% set pageId = 'your-cases' %}
 
 {% block pageTitle %}
   Case list
