--- a/app/views/v1/new.html
+++ b/app/views/v1/new.html
@@ -1,8 +1,8 @@
 
-{% extends "layout.html" %}
+{% extends "./layout.html" %}
 
 {% block pageTitle %}
-  Case list
+  Create case
 {% endblock %}
 
 {% block content %}
@@ -12,9 +12,5 @@
           <h1 class="govuk-heading-l">Create case filter</h1>
         </div>
       </a>
-
-
-    </div>
-</div>
 
 {% endblock %}
