--- a/app/views/v1/search.html
+++ b/app/views/v1/search.html
@@ -2,15 +2,16 @@
 {% extends "./layout.html" %}
 
 {% block pageTitle %}
-  Case progression
+  Search
 {% endblock %}
 
 {% block content %}
+  <h1 class="govuk-heading-xl">Find case (h1)</h1>
+
   <a href="/v1/">
     <div class="black-box">
-      <h1 class="govuk-heading-l">Case progression</h1>
+      <h1 class="govuk-heading-l">Case search</h1>
     </div>
   </a>
-</div>
 
 {% endblock %}
