--- a/app/views/v1/details.html
+++ b/app/views/v1/details.html
@@ -1,8 +1,8 @@
 
-{% extends "layout.html" %}
+{% extends "./layout.html" %}
 
 {% block pageTitle %}
-  Case list
+  Case details
 {% endblock %}
 
 {% block content %}
@@ -11,14 +11,14 @@
     <div class="hmcts-page-heading__title">
       <h1 class="govuk-heading-xl">Case details (h1)</h1>
     </div>
-      <div class="hmcts-page-heading__actions">
-          <a href="/v1/progression">
-            <div class="black-box black-box--small">
-              <h1 class="govuk-heading-m">Case actions</h1>
-            </div>
-          </a>
-      </div>
+    <div class="hmcts-page-heading__actions">
+        <a href="/v1/progression">
+          <div class="black-box black-box--small">
+            <h1 class="govuk-heading-m">Case actions</h1>
+          </div>
+        </a>
     </div>
+  </div>
 
 
   <a href="/v1/">
@@ -26,6 +26,5 @@
       <h1 class="govuk-heading-l">Case details</h1>
     </div>
   </a>
-</div>
 
 {% endblock %}
