--- a/app/views/v1/layout.html
+++ b/app/views/v1/layout.html
@@ -92,7 +92,7 @@
 
 {% block bodyEnd %}
   {% block scripts %}
-    {% include "includes/scripts.html" %}
+    {% include "./scripts.html" %}
     {% block pageScripts %}{% endblock %}
   {% endblock %}
 {% endblock %}
