Upgrade to latest HMCTS Frontend

--- a/app/views/v1/layout.html
+++ b/app/views/v1/layout.html
@@ -26,11 +26,11 @@
 {% from "textarea/macro.njk"         import govukTextarea %}
 {% from "warning-text/macro.njk"     import govukWarningText %}
 
-{% from "badge/macro.njk"     import hmctsBadge %}
-{% from "page-header-with-actions/macro.njk" import hmctsPageHeaderWithActions %}
-{% from "global-header/macro.njk" import hmctsGlobalHeader %}
-{% from "global-footer/macro.njk" import hmctsGlobalFooter %}
-{% from "primary-navigation/macro.njk" import hmctsPrimaryNavigation %}
+{% from "hmcts-badge/macro.njk"     import hmctsBadge %}
+{% from "hmcts-page-header-with-actions/macro.njk" import hmctsPageHeaderWithActions %}
+{% from "hmcts-header/macro.njk" import hmctsGlobalHeader %}
+{% from "hmcts-footer/macro.njk" import hmctsGlobalFooter %}
+{% from "hmcts-primary-navigation/macro.njk" import hmctsPrimaryNavigation %}
 
 {% block head %}
   {% include "includes/head.html" %}
