--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -26,8 +26,8 @@
 {% from "textarea/macro.njk"         import govukTextarea %}
 {% from "warning-text/macro.njk"     import govukWarningText %}
 
-{% from "badge/macro.njk"     import hmctsBadge %}
-{% from "page-header-with-actions/macro.njk" import hmctsPageHeaderWithActions %}
+{% from "hmcts-badge/macro.njk"     import hmctsBadge %}
+{% from "hmcts-page-header-with-actions/macro.njk" import hmctsPageHeaderWithActions %}
 
 {% block head %}
   {% include "includes/head.html" %}
