Expose base route to all views within the folder

--- a/app/views/s1/layout.html
+++ b/app/views/s1/layout.html
@@ -64,7 +64,7 @@
     label: 'Primary navigation',
     items: [{
     text: 'Your cases',
-    href: '/s1/',
+    href: config.path+'/',
     active: pageId == 'your-cases'
     }],
     searchHtml: searchHtml
