--- a/app/views/v1/progression.html
+++ b/app/views/v1/progression.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  <a href="/v1/">
+  <a href="{{config.path}}/">
     <div class="black-box">
       <h1 class="govuk-heading-l">Case progression</h1>
     </div>
