--- a/app/views/s1/search.html
+++ b/app/views/s1/search.html
@@ -8,7 +8,7 @@
 {% block content %}
   <h1 class="govuk-heading-xl">Find case (h1)</h1>
 
-  <a href="/s1/search-results">
+  <a href="{{config.path}}/search-results">
     <div class="black-box">
       <h1 class="govuk-heading-l">Case search</h1>
     </div>
