--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -14,7 +14,7 @@
     },
     items: [{
       text: 'Create case',
-      href: '/v1/new'
+      href: config.path+'/new'
     }]
   }) }}
 
@@ -26,7 +26,7 @@
     </div>
     <div class="govuk-grid-column-two-thirds">
 
-      <a href="/v1/details">
+      <a href="{{config.path}}/details">
         <div class="black-box">
           <h1 class="govuk-heading-l">Case list</h1>
         </div>
