Add search results to v1

--- a/app/views/s1/index.html
+++ b/app/views/s1/index.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a href="{{config.path}}/search">
+      <a href="{{getUrl('/search')}}">
         <div class="black-box">
           <h1 class="govuk-heading-l">Login</h1>
         </div>
