--- a/app/views/v1/new.html
+++ b/app/views/v1/new.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-      <a href="{{config.path}}/progression">
+      <a href="{{getUrl('/progression')}}">
         <div class="black-box">
           <h1 class="govuk-heading-l">Create case filter</h1>
         </div>
