--- a/app/views/v1/search-results.html
+++ b/app/views/v1/search-results.html
@@ -8,32 +8,23 @@
 {% endblock %}
 
 {% block content %}
-  {{ hmctsPageHeaderWithActions({
-    title: {
-      html: '<h1 class="govuk-heading-xl">Your cases (h1)</h1>'
-    },
-    items: [{
-      text: 'Create case',
-      href: getUrl('/new')
-    }]
-  }) }}
+
+  <h1 class="govuk-heading-xl">Search results (h1)</h1>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
-        <div class="black-box">
-            <h1 class="govuk-heading-l">Filter</h1>
-        </div>
+      <div class="black-box">
+        <h1 class="govuk-heading-l">Filter</h1>
+      </div>
     </div>
     <div class="govuk-grid-column-two-thirds">
 
-      <a href="{{getUrl('/details')}}">
+      <a href="#">
         <div class="black-box">
           <h1 class="govuk-heading-l">Case list</h1>
         </div>
       </a>
-
-
     </div>
-</div>
+  </div>
 
 {% endblock %}
