--- a/app/views/v1/create-case.html
+++ b/app/views/v1/create-case.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 
-      <a href="{{getUrl('/create-case')}}">
+      <a href="{{getUrl('/create-case-confirmation')}}">
         <div class="black-box">
-          <h1 class="govuk-heading-l">Create case filter</h1>
+          <h1 class="govuk-heading-l">Create case</h1>
         </div>
       </a>
 
