--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
       {% set iterationOneHtml %}
         <p class="govuk-body">Illustrate the components and journey as black boxes including the way the components load and render indepently.</p>
         <ul class="govuk-list">
-          <li><a href="/v1">View prototype</a></li>
+          <li><a href="/v1/cases">View prototype</a></li>
         </ul>
       {% endset %}
 
