--- a/app/views/v1/cases/edit.html
+++ b/app/views/v1/cases/edit.html
@@ -1,12 +1,12 @@
 
-{% extends "./layout.html" %}
+{% extends "../layout.html" %}
 
 {% block pageTitle %}
   Case progression
 {% endblock %}
 
 {% block content %}
-  <a href="{{getUrl('/')}}">
+  <a href="{{getUrl('/cases/edit-confirmation')}}">
     <div class="black-box">
       <h1 class="govuk-heading-l">Case progression</h1>
     </div>
