--- a/app/views/v1/layout.html
+++ b/app/views/v1/layout.html
@@ -62,7 +62,7 @@
     label: 'Primary navigation',
     items: [{
     text: 'Your cases',
-    href: getUrl('/'),
+    href: getUrl('/cases'),
     active: pageId == 'your-cases'
     }],
     searchHtml: searchHtml
