--- a/app/views/v1/scripts.html
+++ b/app/views/v1/scripts.html
@@ -13,36 +13,35 @@
 
 <script>
 
-function shuffle(array) {
-  var currentIndex = array.length, temporaryValue, randomIndex;
+// function shuffle(array) {
+//   var currentIndex = array.length, temporaryValue, randomIndex;
 
-  // While there remain elements to shuffle...
-  while (0 !== currentIndex) {
+//   // While there remain elements to shuffle...
+//   while (0 !== currentIndex) {
 
-    // Pick a remaining element...
-    randomIndex = Math.floor(Math.random() * currentIndex);
-    currentIndex -= 1;
+//     // Pick a remaining element...
+//     randomIndex = Math.floor(Math.random() * currentIndex);
+//     currentIndex -= 1;
 
-    // And swap it with the current element.
-    temporaryValue = array[currentIndex];
-    array[currentIndex] = array[randomIndex];
-    array[randomIndex] = temporaryValue;
-  }
+//     // And swap it with the current element.
+//     temporaryValue = array[currentIndex];
+//     array[currentIndex] = array[randomIndex];
+//     array[randomIndex] = temporaryValue;
+//   }
 
-  return array;
-}
+//   return array;
+// }
+// var blackBoxes = $('.black-box');
+// var blackBoxesArray = blackBoxes.toArray();
+// blackBoxes.hide();
+// $.each(blackBoxesArray, function(i, el) {
+//   fadeInAfterDelay(el, (Math.floor(Math.random() * 3000) + 1000));
+// });
 
-var blackBoxes = $('.black-box');
-var blackBoxesArray = blackBoxes.toArray();
-blackBoxes.hide();
-$.each(blackBoxesArray, function(i, el) {
-  fadeInAfterDelay(el, (Math.floor(Math.random() * 3000) + 1000));
-});
-
-function fadeInAfterDelay(el, delay) {
-  window.setTimeout(function() {
-    $(el).fadeIn();
-  }, delay);
-}
+// function fadeInAfterDelay(el, delay) {
+//   window.setTimeout(function() {
+//     $(el).fadeIn();
+//   }, delay);
+// }
 
 </script>
