--- a/app/views/v1/search/results.html
+++ b/app/views/v1/search/results.html
@@ -1,7 +1,5 @@
 
-{% extends "./layout.html" %}
-
-{% set pageId = 'your-cases' %}
+{% extends "../layout.html" %}
 
 {% block pageTitle %}
   Case list
