--- a/app/views/v1/cases/new-step2.html
+++ b/app/views/v1/cases/new-step2.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout.html" %}
+{% extends "../layout.html" %}
 
 {% block pageTitle %}
   Create case
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-      <a href="{{getUrl('/create-case-confirmation')}}">
+      <a href="{{getUrl('/cases/new-confirmation')}}">
         <div class="black-box">
           <h1 class="govuk-heading-l">Create case</h1>
         </div>
