--- a/app/views/v1/cases/show.html
+++ b/app/views/v1/cases/show.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout.html" %}
+{% extends "../layout.html" %}
 
 {% block pageTitle %}
   Case details
@@ -12,7 +12,7 @@
       <h1 class="govuk-heading-xl">Case details (h1)</h1>
     </div>
     <div class="hmcts-page-heading__actions">
-        <a href="{{getUrl('/progression')}}">
+        <a href="{{getUrl('/cases/edit')}}">
           <div class="black-box black-box--small">
             <h1 class="govuk-heading-m">Case actions</h1>
           </div>
@@ -21,7 +21,7 @@
   </div>
 
 
-  <a href="{{getUrl('/')}}">
+  <a href="#">
     <div class="black-box">
       <h1 class="govuk-heading-l">Case details</h1>
     </div>
