--- a/app/views/v1/search/index.html
+++ b/app/views/v1/search/index.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout.html" %}
+{% extends "../layout.html" %}
 
 {% block pageTitle %}
   Search
@@ -8,7 +8,7 @@
 {% block content %}
   <h1 class="govuk-heading-xl">Find case (h1)</h1>
 
-  <a href="{{getUrl('/search-results')}}">
+  <a href="{{getUrl('/search/results')}}">
     <div class="black-box">
       <h1 class="govuk-heading-l">Case search</h1>
     </div>
