Edit confirmation updated

--- a/app/views/v1/cases/edit-confirmation.html
+++ b/app/views/v1/cases/edit-confirmation.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
           {{ govukPanel({
             titleText: "Case edited successfully",
-            html: "<strong>HDJ2123F</strong>"
+            html: "HDJ2123F"
           }) }}
 
           <p class="govuk-body">
