Confirmation page content

--- a/app/views/v1/cases/new-confirmation.html
+++ b/app/views/v1/cases/new-confirmation.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
           {{ govukPanel({
-            titleText: "Case created successfully",
+            titleText: "Case created",
             html: "HDJ2123F"
           }) }}
 
