added notice of acting feature

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,27 @@
 
       <h2 class="govuk-heading-l">Iterations</h2>
 
+
+ {% set iterationTwoHtml %}
+        <p class="govuk-body">Added support for Notice of Acting</p>
+        <ul class="govuk-list">
+          <li><a href="/v3/cases">View prototype</a></li>
+        </ul>
+      {% endset %}
+
+      {{ govukDetails({
+        summaryHtml: '<div class="govuk-!-font-size-24 govuk-!-font-weight-bold">Iteration 3</div>',
+        html: iterationTwoHtml
+      }) }}
+
+      {% set iterationOneHtml %}
+        <p class="govuk-body">Illustrate the components and journey as black boxes including the way the components load and render indepently.</p>
+        <ul class="govuk-list">
+          <li><a href="/v1/cases">View prototype</a></li>
+        </ul>
+      {% endset %}
+
+
       {% set iterationTwoHtml %}
         <p class="govuk-body">This one shows success messages on the case details page.</p>
         <ul class="govuk-list">
