updates to notice to act feature

--- a/app/views/v3/cases/confirmation-email-portal.html
+++ b/app/views/v3/cases/confirmation-email-portal.html
@@ -10,9 +10,11 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a href="confirmation-portal">
-<img src="/public/images/notice-to-act-email.png" alt="Mock email"></a>
+      <a href="">
+<img src="/public/images/notice-to-act-email-sol.png" alt="Mock email"></a>
       
+<p><a style="color:red" href="index">[Click here to continue journey from solicitors next step point of view]</a></p>
+
     </div>
   </div>
 {% endblock %}
