--- a/app/views/v3/cases/notice-confirmation.html
+++ b/app/views/v3/cases/notice-confirmation.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-<p><a href="confirmation-email">Continue journey - Link to email - they will see</a></p>
+<p><a style="color:red" href="confirmation-email">[Click here to continue journey from recepient point of view (Email - they will see)]</a></p>
 
 {% endblock %}
 
