--- a/app/views/v3/cases/confirmation-portal-success.html
+++ b/app/views/v3/cases/confirmation-portal-success.html
@@ -2,27 +2,37 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Create case
+  Confirmation
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-         {{ govukPanel({
-              titleText: "Confirmation sent to",
-              html: data['emailaddress']
-            }) }}
-      <h2 class="govuk-heading-m">What happens next</h2>
 
+<div class="govuk-panel govuk-panel--confirmation">
+          <h1 class="govuk-panel__title">
+            All done
+          </h1>
+        <!--  <div class="govuk-panel__body">
+            Your reference number<br><strong>HDJ2123F</strong>
+          </div> -->
+        </div>
      
        <p class="govuk-body"> 
-       The recepient will get an email from HM Courts and Tribunals asking them to confirm the notice of acting request to act ... some more text in here... 
-      </p>
-    <p><a href="index.html">Back to your cases</a></p>
+
+       <p class="govuk-body">We have sent a confirmation email to Hamlin and Tinklin Solicitors, notifying them of the change.</p>
+
+        <h2 class="govuk-heading-m">What happens next</h2>
+
+        <p class="govuk-body">
+          New text here for anything the user needs to do.
+        </p>
+
+        <P>You can now close this window</P>
+ 
     </div>
   </div>
-
-<p><a href="confirmation-email">Continue journey - Link to email - they will see</a></p>
+<p><a style="color:red" href="confirmation-email-portal">[Click here to continue journey from solicitors point of view (Email - they will see)]</a></p>
 
 {% endblock %}
 
