--- a/app/views/v3/cases/notice.html
+++ b/app/views/v3/cases/notice.html
@@ -19,7 +19,7 @@
  <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-          <h1 class="govuk-heading-xl">Notice of Acting</h1>
+          <h1 class="govuk-heading-xl">Notice of acting</h1>
 
           <p>[NEW TEXT REQUIRED - Context for action]</p>
 
