Updated notice to act with copy from content designer

--- a/app/views/v3/cases/confirmation-email-portal.html
+++ b/app/views/v3/cases/confirmation-email-portal.html
@@ -13,7 +13,7 @@
       <a href="">
 <img src="/public/images/notice-to-act-email-sol.png" alt="Mock email"></a>
       
-<p><a style="color:red" href="index">[Click here to continue journey from solicitors next step point of view]</a></p>
+<p><a style="color:green" href="index">[Click here to continue journey from solicitors next step point of view]</a></p>
 
     </div>
   </div>
