--- a/app/views/v3/cases/confirmation-portal-success.html
+++ b/app/views/v3/cases/confirmation-portal-success.html
@@ -11,7 +11,7 @@
 
 <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            All done
+            Confirmation successful
           </h1>
         <!--  <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
@@ -20,19 +20,19 @@
      
        <p class="govuk-body"> 
 
-       <p class="govuk-body">We have sent a confirmation email to Hamlin and Tinklin Solicitors, notifying them of the change.</p>
+       <p class="govuk-body">We have a sent an email to [SOLICITOR NAME] confirming you want them to act on your behalf.</p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
 
-        <p class="govuk-body">
-          New text here for anything the user needs to do.
+        <p style="color:red">
+          Check with BA if there’s any follow up actions, eg. ‘Your legal representative will contact you within [X WORKING DAYS]. Contact your legal representative for more information.’
         </p>
 
         <P>You can now close this window</P>
  
     </div>
   </div>
-<p><a style="color:red" href="confirmation-email-portal">[Click here to continue journey from solicitors point of view (Email - they will see)]</a></p>
+<p><a style="color:green" href="confirmation-email-portal">[Click here to continue journey from solicitors point of view (Email - they will see)]</a></p>
 
 {% endblock %}
 
