--- a/app/views/v3/cases/confirmation-portal.html
+++ b/app/views/v3/cases/confirmation-portal.html
@@ -6,10 +6,10 @@
 {% block content %}
  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-xl">Confirm notice to act</h1>
-          <p>Supporting text to be added.</p>
+          <h1 class="govuk-heading-xl">Confirm details of your legal representative</h1>
+          <p>You’re confirming that you give permission for this organisation to act on your behalf.</p>
 
-    <h2 class="govuk-heading-m">Details</h2>
+    <h2 class="govuk-heading-m">Organisation details</h2>
       <form action="/v3/cases/notice-confirmation">
          <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -29,15 +29,12 @@
             <dd class="govuk-summary-list__value">
               1197-2489-3471-2344
             </dd>
-           
           </div>
         </dl> 
 
-       <h2 class="govuk-heading-m">Legal bit</h2>
-
-        <p class="govuk-body">By submitting this request you are confirming that you are instructing the solicitor to act on your behalf.</p>
+       
          {{ govukButton({
-          "text": "Confirm and send",
+          "text": "Confirm",
           href: 'confirmation-portal-success'
         }) }}
       </form>
