--- a/app/views/v3/cases/notice-confirmation.html
+++ b/app/views/v3/cases/notice-confirmation.html
@@ -11,20 +11,20 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
          {{ govukPanel({
-              titleText: "Confirmation sent to",
+              titleText: "Confirmation email sent",
               html: data['emailaddress']
             }) }}
       <h2 class="govuk-heading-m">What happens next</h2>
 
      
        <p class="govuk-body"> 
-       The recepient will get an email from HM Courts and Tribunals asking them to confirm the notice of acting request to act ... some more text in here... 
+       Your client will receive an email from HM Courts & Tribunals Service asking them to confirm they’re happy for you to act on their behalf. 
       </p>
     <p><a href="index.html">Back to your cases</a></p>
     </div>
   </div>
 
-<p><a style="color:red" href="confirmation-email">[Click here to continue journey from recepient point of view (Email - they will see)]</a></p>
+<p><a style="color:green" href="confirmation-email">[Click here to continue journey from recepient point of view (Email - they will see)]</a></p>
 
 {% endblock %}
 
