--- a/app/views/v3/cases/confirmation-portal.html
+++ b/app/views/v3/cases/confirmation-portal.html
@@ -24,7 +24,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Case reference
+              Court case reference
             </dt>
             <dd class="govuk-summary-list__value">
               1197-2489-3471-2344
