Text amends for notice of acting

--- a/app/views/v3/cases/confirmation-portal-success.html
+++ b/app/views/v3/cases/confirmation-portal-success.html
@@ -1,8 +1,12 @@
 
 {% extends "layout.html" %}
 
+{% set serviceName %}
+  Confirm details of your legal representative
+{% endset%}
+
 {% block pageTitle %}
-  Confirmation
+  Confirmation successful
 {% endblock %}
 
 {% block content %}
