--- a/app/views/v3/cases/notice-confirmation.html
+++ b/app/views/v3/cases/notice-confirmation.html
@@ -4,7 +4,7 @@
 {% set pageId = 'notice-of-acting' %}
 
 {% block pageTitle %}
-  Notice of acting confirmation
+  Confirmation email sent
 {% endblock %}
 
 {% block content %}
