--- a/app/views/v3/cases/confirmation-portal.html
+++ b/app/views/v3/cases/confirmation-portal.html
@@ -1,7 +1,13 @@
 
 {% extends "layout.html" %}
 
-{% set pageId = 'your-cases' %}
+{% set serviceName %}
+  Confirm details of your legal representative
+{% endset%}
+
+{% block pageTitle %}
+  Confirm details of your legal representative
+{% endblock %}
 
 {% block content %}
  <div class="govuk-grid-row">
