--- a/app/views/v3/cases/confirmation-portal-success.html
+++ b/app/views/v3/cases/confirmation-portal-success.html
@@ -28,11 +28,11 @@
 
         <h2 class="govuk-heading-m">What happens next</h2>
 
-        <p style="color:red">
-          Check with BA if there’s any follow up actions, eg. ‘Your legal representative will contact you within [X WORKING DAYS]. Contact your legal representative for more information.’
+        <p>
+          Your case will now be shared with [SOLICITOR NAME]. Contact them directly if you have any questions about your case.
         </p>
 
-        <P>You can now close this window</P>
+        <P>You can now close this window.</P>
  
     </div>
   </div>
