--- a/app/views/v3/cases/notice-confirmation.html
+++ b/app/views/v3/cases/notice-confirmation.html
@@ -18,7 +18,7 @@
 
      
        <p class="govuk-body"> 
-       Your client will receive an email from HM Courts & Tribunals Service asking them to confirm they’re happy for you to act on their behalf. 
+       Your client will receive an email from HM Courts & Tribunals service to confirm they want you to act on their behalf.
       </p>
     <p><a href="index.html">Back to your cases</a></p>
     </div>
