--- a/app/views/v3/cases/notice.html
+++ b/app/views/v3/cases/notice.html
@@ -25,7 +25,7 @@
 
                            <ul class="govuk-list govuk-list--bullet">
                    
-<li>court reference number</li>
+<li>case reference</li>
 <li>email address</li></ul>
 
           
@@ -34,7 +34,7 @@
 
            {{ govukInput({
               label: {
-                text: "Court reference number",
+                text: "Case reference",
                 classes: 'govuk-label--m'
                 },
                 hint: {
