--- a/app/views/v3/cases/confirmation-portal.html
+++ b/app/views/v3/cases/confirmation-portal.html
@@ -13,7 +13,7 @@
  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl">Confirm details of your legal representative</h1>
-          <p>You’re confirming that you give permission for this organisation to act on your behalf.</p>
+          <p>You’ve asked for this organisation to act on your behalf.</p>
 
     <h2 class="govuk-heading-m">Organisation details</h2>
       <form action="/v3/cases/notice-confirmation">
@@ -30,7 +30,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Court case reference
+              Case reference
             </dt>
             <dd class="govuk-summary-list__value">
               1197-2489-3471-2344
