--- a/app/views/v3/cases/confirmation-portal.html
+++ b/app/views/v3/cases/confirmation-portal.html
@@ -10,6 +10,10 @@
 {% endblock %}
 
 {% block content %}
+
+
+  
+
  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl">Confirm details of your legal representative</h1>
@@ -43,9 +47,13 @@
           "text": "Confirm",
           href: 'confirmation-portal-success'
         }) }}
+
+<p><a href="/v3/cases/confirmation-portal-cancel">I can't do this right now</a></p>
+
       </form>
     </div>
   </div>
+
 
 
 
