--- a/app/views/v3/cases/confirmation-portal-cancel.html
+++ b/app/views/v3/cases/confirmation-portal-cancel.html
@@ -25,7 +25,10 @@
 
 
    <h1 class="govuk-heading-xl">There has been no change to your current legal representation</h1>
-          
+
+   <p>You've chosen not to change your legal representation at this time.
+       
+     <h2 class="govuk-heading-m">What happens next</h2>
 
 <p>You have until the link expires on your email to confirm your choice of organisation to act on your behalf.</p>
 
