--- a/app/views/v3/cases/confirmation-portal-cancel.html
+++ b/app/views/v3/cases/confirmation-portal-cancel.html
@@ -24,13 +24,15 @@
       <div class="govuk-grid-column-two-thirds">
 
 
-   <h1 class="govuk-heading-xl">There has been no change to your current legal representation</h1>
+   <h1 class="govuk-heading-xl">There has been no change to your legal representative</h1>
 
-   <p>You've chosen not to change your legal representation at this time.
+   <p>You’ve chosen not to change your legal representative at this time.</p>
        
      <h2 class="govuk-heading-m">What happens next</h2>
 
-<p>You have until the link expires on your email to confirm your choice of organisation to act on your behalf.</p>
+<p>You can use the link in the confirmation email to tell us who you want to represent your case.</p>
+
+<p>The link will expire 14 days from the date you received the email.</p>
 
 
         <P>You can now close this window.</P>
