--- a/app/views/v3/cases/confirmation-portal.html
+++ b/app/views/v3/cases/confirmation-portal.html
@@ -17,7 +17,7 @@
  <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl">Confirm details of your legal representative</h1>
-          <p>You’ve asked for this organisation to act on your behalf.</p>
+          <p>You’ve asked for the following organisation to act on your behalf.</p>
 
     <h2 class="govuk-heading-m">Organisation details</h2>
       <form action="/v3/cases/notice-confirmation">
