--- a/app/views/v3/cases/confirmation-portal-success.html
+++ b/app/views/v3/cases/confirmation-portal-success.html
@@ -15,7 +15,7 @@
 
 <div class="govuk-panel govuk-panel--confirmation">
           <h1 class="govuk-panel__title">
-            Confirmation successful
+            Confirmation request sent
           </h1>
         <!--  <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
@@ -24,7 +24,7 @@
      
        <p class="govuk-body"> 
 
-       <p class="govuk-body">We have a sent an email to [SOLICITOR NAME] confirming you want them to act on your behalf.</p>
+       <p class="govuk-body">We have a sent an email to [SOLICITOR NAME] at [ORGANISATION] confirming you want them to act on your behalf.</p>
 
         <h2 class="govuk-heading-m">What happens next</h2>
 
@@ -36,7 +36,9 @@
  
     </div>
   </div>
-<p><a style="color:green" href="confirmation-email-portal">[Click here to continue journey from solicitors point of view (Email - they will see)]</a></p>
+
+   <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-email-portal">Click here to continue journey from solicitors point of view (Email - they will see)</a></h3>
+
 
 {% endblock %}
 
