--- a/app/views/v3/cases/details.html
+++ b/app/views/v3/cases/details.html
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 <form action="/v3/cases/notice-confirmation">
-      <h1 class="govuk-heading-xl">Check corrispondance details</h1>
+      <h1 class="govuk-heading-xl">Check correspondence details</h1>
 
 
       <h2 class="govuk-heading-m">Your details</h2>
