--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,10 @@
         <ul class="govuk-list">
           <li><a href="/v3/cases">View prototype</a></li>
         </ul>
+         <p class="govuk-body">Sign in accept Terms and Conditions</p>
+        <ul class="govuk-list">
+          <li><a href="/v4">View</a></li>
+        </ul>
       {% endset %}
 
       {{ govukDetails({
