--- a/app/views/v4/terms.html
+++ b/app/views/v4/terms.html
@@ -17,17 +17,14 @@
 
 
 
-  <h3 class="govuk-heading-m">Terms and conditions</h3>
-<p>By submitting this notification you are confirming that, you have read the <a href="terms-pop" rel="noopener noreferrer" target="_blank">terms and conditions</a> and are eligable to use this service.</p>
+  <h2 class="govuk-heading-m">Terms and conditions</h2>
+<p>You have read and understood the <a href="terms-pop" rel="noopener noreferrer" target="_blank">terms and conditions</a> and are eligible for an account to manage your organisation and cases.</p>
 
-
+<p>You should check these terms and conditions regularly. We may update them at any time without notice. If you continue to use this service after the terms and conditions have changed, you are deemed to have agreed to the changes.</p>
 
 <p><a href="search" role="button" draggable="false" class="govuk-button">
-  I confirm
+  Confirm
 </a></p>
-
-
-<p><a href="#">I do not accept the terms and conditions</a></p>
 
     </div>
   </div>
